src/projects/GalaxyDefender/GalaxyDefender.module.scss
@font-face {
  font-family: 'spaceFont';
  src: url('../../assets/galaxydefender/fonts/FiveByFive.ttf');
}

@font-face {
  font-family: 'SEGA LOGO FONT';
  font-style: normal;
  font-weight: normal;
  src: local('SEGA LOGO FONT'), url('../../assets/galaxydefender/fonts/SEGA.woff') format('woff');
}

.bodyContainer {
  display: flex;
  justify-content: center;
  flex-direction: column;
  background-color: black;
  margin-bottom: 50px;
  background: url('../../assets/galaxydefender/images/bg_uniq.png') no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  min-height: 100vh;
}

.header {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: 'SEGA LOGO FONT';
  color: #0ccac4;
  margin-top: -10px;
  text-shadow: 2px 2px blue;

  a {
    color: #0ccac4;
    text-decoration: none;
    font-size: 45px;
  }
}

.gameContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;

  canvas {
    position: absolute;
    top: 450px;
    bottom: 50px;
    left: 50%;
    background: transparent;
    transform: translate(-50%, -50%);
  }
}

.background {
  border: 2px solid lightgrey;
  background: url('../../assets/galaxydefender/images/background-black.png');
  width: 800px;
  height: 650px;
  z-index: -2;
  box-shadow: 0px 2px 10px rgb(2, 207, 2);
  animation: move_background 5s linear infinite;
}

@keyframes move_background {
  from {
    background-position-y: 0px;
  }
  to {
    background-position-y: 360px;
  }
}

.main {
  z-index: -1;
}

.ship {
  z-index: 0;
}

.menu {
  display: block;
  justify-content: center;
  text-align: center;
  position: absolute;
  width: 100%;
  margin-top: -90px;
  z-index: 5;

  img {
    margin-bottom: 20px;
  }
}

.instructions {
  margin-top: 30px;

  button {
    margin-bottom: 50px;
    font-size: 25px;
    font-family: 'spaceFont', Arial, sans-serif;
    color: white;
    border: none;
    background: none;
    cursor: pointer;

    &:hover {
      color: #0ccac4;
    }
  }

  div {
    padding: 12px;
    color: white;
    font-family: 'spaceFont', Arial, sans-serif;
  }
}

.gameOver {
  display: flex;
  background-color: black;
  justify-content: center;
  text-align: center;
  position: absolute;
  width: 102%;
  margin-top: -50px;
  z-index: 5;
  font-family: 'spaceFont', Arial, sans-serif;
  font-size: 25px;
  color: red;
  opacity: 0.8;
  padding-top: 30px;
  margin-left: -10px;
}

.gameOption {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.gameOverText {
  font-size: 35px;
  margin-bottom: 20px;
}

.gameOver button {
  margin-bottom: 50px;
  font-size: 25px;
  font-family: 'spaceFont', Arial, sans-serif;
  color: white;
  border: none;
  background: none;
  margin-top: 50px;
  cursor: pointer;

  &:hover {
    color: #0ccac4;
  }
}

.audioControl {
  display: flex;
  justify-content: center;
  margin-left: 740px;
  background-color: none;

  button {
    background-color: transparent;
    color: white;
    display: flex;
    align-items: center;
    outline: none;
    border: none;
    cursor: pointer;

    &:hover {
      color: #0ccac4;
    }

    img {
      margin-left: 5px;
      background: none;
    }
  }
}

.score {
  display: flex;
  justify-content: center;
  margin-left: 650px;
  margin-top: 10px;
  background-color: none;
  color: #ffc05a;
  font-family: 'spaceFont', Arial, sans-serif;

  span {
    margin-left: 5px;
  }
}

